test(s3): add commit wal object test
1. add commit wal object test

Signed-off-by: TheR1sing3un <ther1sing3un@163.com>